--- a/frontend/src/components/MovieCard/MovieCard.css
+++ b/frontend/src/components/MovieCard/MovieCard.css
@@ -2,19 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 200px;
-  padding: 20px;
-  margin: 15px;
-  border: 1px solid #ccc;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
   border-radius: 5px;
-  background-color: #f8f8f8;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: all 0.2s;
+  margin: 10px;
+  padding: 15px;
+  transition: transform 0.2s;
+  width: 200px;
 }
 
 .movie-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }
 
 .movie-card img {
@@ -25,21 +25,13 @@
 }
 
 .movie-card h3 {
-  margin: 15px 0;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 1.1rem;
+  font-weight: 800;
   text-align: center;
 }
 
 .movie-card p {
-  margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 0.9rem;
   font-weight: 400;
   text-align: center;
-}
-
-.rating-container {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
 }
